prepare for github action and package publishing